# Video-editor

./: .gitignore  CMakeLists.txt  README.md
Renderer/src/: Application.cpp  Application.h  Main.cpp  Window.cpp  Window.h  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
